[package]
name = "stm32-hrtim"
version = "0.2.0"
edition = "2021"
description = "STM32 HRTIM peripheral driver"
documentation = "https://docs.rs/stm32-hrtim"
license = "MIT OR Apache-2.0"
repository = "https://github.com/usbalbin/stm32-hrtim"

[package.metadata.docs.rs]
features = ["stm32g474", "defmt"]

[dependencies]
stm32f3 = { version = "0.16.0", optional = true, default-features = false }
stm32h7 = { version = "0.16.0", optional = true, default-features = false }
stm32g4 = { version = "0.16.0", optional = true, default-features = false }

defmt = { version = "1", optional = true }
fugit = "0.3.7"

[dev-dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
defmt-rtt = "0.4.0"
cortex-m-rt = "0.7.2"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

[features]
default = []

hrtim_v1 = []
hrtim_v1_1 = []
hrtim_v2 = []

stm32f3 = ["stm32f3/stm32f3x4"]
stm32h7 = ["dep:stm32h7"]
stm32g4 = []

stm32f334 = ["stm32f3/stm32f3x4", "hrtim_v1"]

stm32h742 = ["stm32h7/stm32h742", "hrtim_v1_1"]
stm32h743 = ["stm32h7/stm32h743", "hrtim_v1_1"]
#stm32h745 = ["stm32h7/stm32h745", "hrtim_v1_1"]
stm32h747cm7 = ["stm32h7/stm32h747cm7", "hrtim_v1_1"]
stm32h750 = ["stm32h7/stm32h750", "hrtim_v1_1"]
stm32h753 = ["stm32h7/stm32h753", "hrtim_v1_1"]
#stm32h755 = ["stm32h7/stm32h755", "hrtim_v1_1"]
#stm32h757 = ["stm32h7/stm32h757", "hrtim_v1_1"]

stm32g474 = ["stm32g4/stm32g474", "hrtim_v2"]
stm32g484 = ["stm32g4/stm32g484", "hrtim_v2"]
defmt = ["dep:defmt", "fugit/defmt"]
